<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainScreen" >

    <TextView
        android:id="@+id/welcomeMessageField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcomeMessage" />

    <Button
        android:id="@+id/rule"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules" />

    <Spinner
        android:id="@+id/arithPick"
        style="@style/AppBaseTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:entries="@array/addition" />

    <Button
        android:id="@+id/startGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startGame" />

    <TextView
        android:id="@+id/answerLabel"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:minHeight="@dimen/activity_vertical_margin"
        android:text="@string/problem"
        android:textSize="@dimen/TextSize.Large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/problemField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterAns" />

        <EditText
            android:id="@+id/answerInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/CorrectOrNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.76"
            android:text="@string/remainder" />

        <EditText
            android:id="@+id/remainderInput"
            android:layout_width="174dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <Button
        android:id="@+id/finalAnswerInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submitSolution" />

    <TextView
        android:id="@+id/userEnterLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score" />

</LinearLayout>