<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Rules" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setOfRules" />

    <Button
        android:id="@+id/backFromRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/backToMain" />

    <ToggleButton
        android:id="@+id/toggleButtonForLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/togButtonOff"
        android:textOff="@string/togButtonOff"
        android:textOn="@string/togButtonOn" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</TableLayout>